Many fixes, added new routes and tests
